name:                iohk-challenge
version:             0.1.0.0
synopsis:            IOHK Technical Test
homepage:            https://github.com/cloudhead/iohk-challenge
license:             BSD3
license-file:        LICENSE
author:              Alexis Sellier
maintainer:          alexis@cloudhead.io
copyright:           2017 Alexis Sellier
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     IOHK.Node
  ghc-options:         -Wall
                       -fno-warn-unused-do-bind
                       -fwarn-tabs
                       -fno-warn-name-shadowing
  build-depends:       base >= 4.7 && < 5
                     , distributed-process
                     , network
                     , network-transport
                     , network-transport-tcp
                     , bytestring
                     , clock
                     , extra
                     , binary
                     , time
  default-language:    Haskell2010

executable iohk-node
  main-is:             src/Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , iohk-challenge
                     , split
                     , random
  default-language:    Haskell2010

test-suite iohk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , iohk-challenge
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cloudhead/iohk-challenge
